# syncrepl

./: .gitignore  .pre-commit-config.yaml  README.rst  docker-compose.yml  pyproject.toml  setup.py  syncrepl-client  syncrepl-client.py
docs/: conf.py
syncrepl_client/: __init__.py  _version.py  callbacks.py  db.py  exceptions.py  iter_ldap.py  ldap_info.py  syncrepl_mode.py
tests/: README.md  docker-compose.yml  syncrepl_client_testing_guidelines.md
tests/behave/: environment.py
tests/behave/common/: constants.py  debug_callback.py  docker_tools.py  singleton.py  virtual_user_client.py
tests/behave/features/: environment.py  refresh_and_persist.feature  refresh_only.feature
tests/behave/steps/: client_steps.py  refresh_only.py
tests/ldifs/: base.ldif
